# nonebot-plugin-HelpWithPic

./: README.md  pyproject.toml  需要前置.txt
nonebot-plugin-HelpWithPic/: __init__.py  config.py  draw.py  draw_contect.py  hwp_main.py  jsondata.py  plugins_data.py
nonebot_plugin_HelpWithPic/: __init__.py  config.py  draw.py  jsondata.py
nonebot_plugin_helpwithpic/: basedata.py  config.py  draw.py  draw_contect.py  hwp_main.py  jsondata.py  plugins_data.py
nonebot_plugin_helpwithpic/utils/: fonts.py
nonebot_plugin_helpwithpic1/: config.py
